--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,8 @@ bin
 obj
 
 # Compiled shared libraries
-Runtimes/*
+/runtimes/*
+/prebuilt/*
 
 # Extracted test meshes (we only commit the .zip archives)
 Data/*
