--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,9 @@ jobs:
     - name: Upload Binaries
       uses: actions/upload-artifact@v4
       with:
+        name: runtimes-${{matrix.os}}
         path: ${{github.workspace}}/runtimes/*
+        overwrite: true
 
   pack:
     runs-on: ubuntu-latest
@@ -34,9 +36,10 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - uses: actions/download-artifact@v3
+    - uses: actions/download-artifact@v4
       with:
-        name: artifact
+        pattern: runtimes-*
+        merge-multiple: true
         path: ${{github.workspace}}/runtimes
 
     - name: Setup .NET Core SDK
